--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         /* Hero Section */
         .hero {
             margin-top: 70px;
-            background: linear-gradient(135deg, rgba(0, 102, 204, 0.85), rgba(0, 168, 204, 0.85)), url('https://images.unsplash.com/photo-1551601651-2a8555f1a136?w=1600&q=80');
+            background:linear-gradient(135deg, rgba(0, 102, 204, 0.85), rgba(0, 168, 204, 0.85)), url('./Images/WhatsApp Image 2025-09-26 at 11.19.49 (2).jpeg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -112,7 +112,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(circle at 30% 50%, rgba(255,255,255,0.1) 0%, transparent 50%);
+            
         }
 
         .hero-content {
@@ -121,7 +121,9 @@
             position: relative;
             z-index: 1;
             animation: fadeInUp 1s ease;
-        }
+            /* background : linear-gradient(135deg, rgba(0, 102, 204, 0.85), rgba(0, 168, 204, 0.85)) */
+            /* color: rgba(51, 153, 204, 0.85);  */
+                }
 
         .hero h1 {
             font-size: 3.5rem;
@@ -770,7 +772,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="hero-content">
-            <h1>Kenneth Matiba Eye & Dental Hospital</h1>
+            <h1>Kenneth Matiba  Hospital</h1>
             <p>State-of-the-art medical facility providing exceptional ophthalmology, optometry, dental, and surgical services with compassionate care.</p>
             <div class="cta-buttons">
                 <!-- <a href="#appointment" class="btn btn-primary">Book Appointment</a> -->
