--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
     <section class="service-charter" id="charter">
         <div class="container">
             <h2 class="section-title">Service Charter</h2>
-            <p class="section-subtitle">Our commitment to excellence in healthcare delivery</p>
 
             <div class="charter-header">
                 <div class="mission-vision">
@@ -128,27 +127,22 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Enquiries/Customer Care</strong></div>
-                                <div>Free</div>
                                 <div>5 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Registration & Bookings</strong></div>
-                                <div>Free</div>
                                 <div>5-10 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Triage</strong></div>
-                                <div>Free</div>
                                 <div>10-20 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Consultation</strong></div>
-                                <div>100 - 200</div>
                                 <div>15-45 Minutes</div>
                             </div>
                         </div>
@@ -158,25 +152,18 @@
                 <!-- Accordion Item 2 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
-                        <h3>Laboratory & Pharmacy Services</h3>
+                        <h3>Laboratory Services</h3>
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Laboratory</strong></div>
-                                <div>100 - 1,000</div>
                                 <div>From 30 Minutes</div>
-                            </div>
-                            <div class="table-row">
-                                <div class="service-name"><strong>Pharmacy</strong></div>
-                                <div>20 - 1,000</div>
-                                <div>15-30 Minutes</div>
                             </div>
                         </div>
                     </div>
@@ -185,23 +172,17 @@
                 <!-- Accordion Item 3 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
-                        <h3>Emergency & Outpatient Services</h3>
+                        <h3>Pharmacy Services</h3>
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
-                            <div class="table-row highlight">
-                                <div class="service-name">
-                                    <strong>Accident & Emergency Services</strong>
-                                    <small style="display:block; margin-top:5px;">General Outpatient Services -
-                                        Trauma, Communicable & Non-Communicable Diseases, Chronic Ailments</small>
-                                </div>
-                                <div>Free (Emergency)<br>100 (General OPD)</div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Pharmacy</strong></div>
                                 <div>15-30 Minutes</div>
                             </div>
                         </div>
@@ -211,6 +192,30 @@
                 <!-- Accordion Item 4 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
+                        <h3>Emergency & Outpatient Services</h3>
+                        <span class="accordion-icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="service-table">
+                            <div class="table-header">
+                                <div>Service</div>
+                                <div>Time</div>
+                            </div>
+                            <div class="table-row highlight">
+                                <div class="service-name">
+                                    <strong>Accident & Emergency Services</strong>
+                                    <small style="display:block; margin-top:5px;">General Outpatient Services -
+                                        Trauma, Communicable & Non-Communicable Diseases, Chronic Ailments</small>
+                                </div>
+                                <div>15-30 Minutes</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Accordion Item 5 -->
+                <div class="accordion-item">
+                    <div class="accordion-header">
                         <h3>👁️ Eye Clinic Services</h3>
                         <span class="accordion-icon">+</span>
                     </div>
@@ -218,28 +223,26 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
                                     <strong>👁️ Eye Clinic</strong>
                                     <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
-                                        <li>Consultation: KSH 200</li>
-                                        <li>Cataract Surgery: KSH 3,000 - 5,000</li>
-                                        <li>Eye Laser Procedures: KSH 1,500</li>
-                                        <li>Other Eye Surgeries: KSH 2,500</li>
-                                        <li>Optometry (Eyewear & Lenses): From 2,000</li>
+                                        <li>Consultation</li>
+                                        <li>Cataract Surgery</li>
+                                        <li>Eye Laser Procedures</li>
+                                        <li>Other Eye Surgeries</li>
+                                        <li>Optometry (Eyewear & Lenses)</li>
                                     </ul>
                                 </div>
-                                <div>200 - 5,000</div>
                                 <div>15 Minutes - In-Patient</div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Accordion Item 5 -->
+                <!-- Accordion Item 6 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
                         <h3>🦷 Dental Clinic Services</h3>
@@ -249,31 +252,29 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
                                     <strong>🦷 Dental Clinic</strong>
                                     <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
-                                        <li>Consultation: KSH 200</li>
-                                        <li>Extractions: KSH 200</li>
-                                        <li>Root Canal: KSH 2,000 - 3,000</li>
-                                        <li>Fillings: KSH 1,000</li>
-                                        <li>Full Mouth Scaling: KSH 500</li>
-                                        <li>Disimpaction: KSH 2,000</li>
-                                        <li>Pulpotomy: KSH 1,000</li>
-                                        <li>Dentures: KSH 1,500 - 6,000</li>
+                                        <li>Consultation</li>
+                                        <li>Extractions</li>
+                                        <li>Root Canal</li>
+                                        <li>Fillings</li>
+                                        <li>Full Mouth Scaling</li>
+                                        <li>Disimpaction</li>
+                                        <li>Pulpotomy</li>
+                                        <li>Dentures</li>
                                     </ul>
                                 </div>
-                                <div>200 - 6,000</div>
                                 <div>15-90 Minutes</div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Accordion Item 6 -->
+                <!-- Accordion Item 7 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
                         <h3>Additional Services</h3>
@@ -283,27 +284,16 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Rehabilitative Services</strong><br><small>Medical
                                         Social Work</small></div>
-                                <div>100</div>
                                 <div>30-40 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Nutrition & Dietetic Services</strong></div>
-                                <div>300</div>
                                 <div>15-30 Minutes</div>
-                            </div>
-                            <div class="table-row">
-                                <div class="service-name">
-                                    <strong>X-Ray Services</strong><br>
-                                    <small>OPG: KSH 500 - 800 | IOPA</small>
-                                </div>
-                                <div>500 - 1,500</div>
-                                <div>30 Min - 1 Hour</div>
                             </div>
                         </div>
                     </div>
@@ -382,8 +372,8 @@
                 <div class="specialist-card">
                     <div class="icon">🏥</div>
                     <h3>Medical Staff</h3>
-                    <p><strong>Support Team</strong></p>
-                    <p>Includes nurses, lab technicians, and support staff who provide essential care services.</p>
+                    <p><strong>Lab Technologists, Nutritionist</strong></p>
+                    <p>Includes nurses and support staff who provide essential care services.</p>
                 </div>
             </div>
         </div>
