Update hospital name and emergency contact details

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Hero Section -->
     <header class="hero" id="home">
         <div class="container hero-content">
-            <h1>Healthcare Excellence For You & Your Family</h1>
+            <h1>Kenneth Matiba Hospital </h1>
             <p>Providing specialized medical care with compassion, dignity, and integrity. Your health is our priority.
             </p>
             <div class="hero-buttons">
@@ -456,12 +456,12 @@
 
             <div class="footer-section">
                 <h3>Emergency</h3>
-                <p>24/7 Emergency Contact:<br><strong>+254 710 218 678</strong></p>
+                <p>24/7 Emergency Contact:<br><strong>+254 102 186 778</strong></p>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 Kenneth Matiba Eye & Dental Hospital - Ministry of Health. All rights reserved.</p>
+            <p>&copy;  Kenneth Matiba Eye & Dental Hospital - Ministry of Health. All rights reserved.</p>
         </div>
     </footer>
 
