Add detailed laboratory service descriptions

--- a/index.html
+++ b/index.html
@@ -162,12 +162,38 @@
                                 <div>Time</div>
                             </div>
                             <div class="table-row">
-                                <div class="service-name"><strong>Laboratory</strong></div>
+                                <div class="service-name"><strong>Basic Laboratory Tests</strong><br>
+                                <small>Random blood sugar, ANC Profile, malaria, Haemoglobin test</small></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Biochemistry</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Haematology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Parasitology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Mycology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Bacteriology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Microbiology and Parasitology</strong></div>
                                 <div>From 30 Minutes</div>
                             </div>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Accordion Item 3 -->
                 <div class="accordion-item">
