Add Optometry service to the list

--- a/index.html
+++ b/index.html
@@ -259,8 +259,9 @@
                                         <li>Cataract Surgery</li>
                                         <li>Eye Laser Procedures</li>
                                         <li>Other Eye Surgeries</li>
-                                        <li>Optometry (Eyewear & Lenses)</li>
+                                       
                                     </ul>
+                                     <strong>Optometry (Eyewear & Lenses)</strong>
                                 </div>
                                 <div>15 Minutes - In-Patient</div>
                             </div>
