Update contact address in index.html

--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
                     <div class="contact-box">
                         <div class="icon">📍</div>
                         <h3>Visit Us</h3>
-                        <p>Kenneth Matiba Hospital<br>Kimorori/Wempa, muranga south, Murang'a<br>Kenya<br>P.O. Box
-                            12345-00100</p>
+                        <p>Kenneth Matiba Hospital<br>Makenji-Kabati, Murang'a<br>Kenya<br>P.O. Box
+                            376-01020</p>
                     </div>
 
                     <div class="contact-box">
