Update HTML structure and text for services

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
-                                    <strong>Accident & Emergency Services</strong>
+                                    <h3>Accident & Emergency Services</h3>
                                     <small style="display:block; margin-top:5px;">General Outpatient Services -
                                         Trauma, Communicable & Non-Communicable Diseases, Chronic Ailments</small>
                                 </div>
@@ -386,7 +386,7 @@
                     <div class="icon">🦷</div>
                     <h3>Dental Surgery</h3>
                     <p><strong>3 Dental Surgeons</strong></p>
-                    <p>Providing dental implants, orthodontics, and oral surgery for healthier smiles.</p>
+                    <p>Providing dental care for healthier smiles.</p>
                 </div>
 
                 <div class="specialist-card">
@@ -399,8 +399,8 @@
                 <div class="specialist-card">
                     <div class="icon">🏥</div>
                     <h3>Medical Staff</h3>
-                    <p><strong>Lab Technologists, Nutritionist</strong></p>
-                    <p>Includes nurses and support staff who provide essential care services.</p>
+                    <p>Lab Technologists, Nutritionist<br>nurses and support staff who provide essential care services. </p>
+                    
                 </div>
             </div>
         </div>
