feat: Add initial website structure including new pages, styles, scripts, and supporting documents.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Hero Section -->
     <header class="hero" id="home">
         <div class="container hero-content">
-            <h1>Healthcare Excellence For You & Your Family</h1>
+            <h1>Kenneth Matiba Hospital </h1>
             <p>Providing specialized medical care with compassion, dignity, and integrity. Your health is our priority.
             </p>
             <div class="hero-buttons">
@@ -52,29 +52,31 @@
                 <div class="service-card">
                     <span class="service-icon">👁️</span>
                     <h3>Ophthalmology</h3>
-                    <p>Complete eye care including cataract surgery, glaucoma treatment, retinal procedures, and
+                    <p>Complete eye care including cataract surgery, glaucoma management, laser surgeries, retinal
+                        procedures, and
                         advanced diagnostic services with state-of-the-art equipment.</p>
                 </div>
 
                 <div class="service-card">
                     <span class="service-icon">👓</span>
-                    <h3>Optometry Services</h3>
-                    <p>Comprehensive eye examinations, vision testing, contact lens fitting, and prescription
-                        eyewear from experienced optometrists.</p>
+                    <h3><strong>Optometry</strong> 👓</h3>
+                    <p>Comprehensive eye examinations, vision testing, contact lens fitting, prescription
+                        eyewear, and low vision rehabilitation from experienced optometrists.</p>
                 </div>
 
                 <div class="service-card">
                     <span class="service-icon">🦷</span>
                     <h3>Dental Services</h3>
                     <p>Full range of dental care including preventive dentistry, cosmetic procedures, orthodontics,
-                        root canals, and dental implants.</p>
+                        dentures, full mouth scaling(teeth cleaning) & polishing, fillings, root canal and extractions.
+                    </p>
                 </div>
 
                 <div class="service-card">
                     <span class="service-icon">🔬</span>
                     <h3>Laboratory Services</h3>
-                    <p>On-site diagnostic laboratory providing accurate and timely results for blood tests,
-                        cultures, and specialized ophthalmic testing.</p>
+                    <p>On-site diagnostic laboratory providing accurate and timely results for blood tests, cultures,
+                        HTS among others.</p>
                 </div>
 
                 <div class="service-card">
@@ -98,7 +100,6 @@
     <section class="service-charter" id="charter">
         <div class="container">
             <h2 class="section-title">Service Charter</h2>
-            <p class="section-subtitle">Our commitment to excellence in healthcare delivery</p>
 
             <div class="charter-header">
                 <div class="mission-vision">
@@ -128,27 +129,22 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Enquiries/Customer Care</strong></div>
-                                <div>Free</div>
                                 <div>5 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Registration & Bookings</strong></div>
-                                <div>Free</div>
                                 <div>5-10 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Triage</strong></div>
-                                <div>Free</div>
                                 <div>10-20 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Consultation</strong></div>
-                                <div>100 - 200</div>
                                 <div>15-45 Minutes</div>
                             </div>
                         </div>
@@ -158,50 +154,64 @@
                 <!-- Accordion Item 2 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
-                        <h3>Laboratory & Pharmacy Services</h3>
+                        <h3>Laboratory Services</h3>
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row">
-                                <div class="service-name"><strong>Laboratory</strong></div>
-                                <div>100 - 1,000</div>
+                                <div class="service-name"><strong>Basic Laboratory Tests</strong><br>
+                                    <small>Random blood sugar, ANC Profile, malaria, Haemoglobin test</small>
+                                </div>
                                 <div>From 30 Minutes</div>
                             </div>
                             <div class="table-row">
-                                <div class="service-name"><strong>Pharmacy</strong></div>
-                                <div>20 - 1,000</div>
-                                <div>15-30 Minutes</div>
+                                <div class="service-name"><strong>Biochemistry</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Haematology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Parasitology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Mycology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Bacteriology</strong></div>
+                                <div>From 30 Minutes</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Microbiology and Parasitology</strong></div>
+                                <div>From 30 Minutes</div>
                             </div>
                         </div>
                     </div>
                 </div>
 
+
                 <!-- Accordion Item 3 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
-                        <h3>Emergency & Outpatient Services</h3>
+                        <h3>Pharmacy Services</h3>
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
-                            <div class="table-row highlight">
-                                <div class="service-name">
-                                    <strong>Accident & Emergency Services</strong>
-                                    <small style="display:block; margin-top:5px;">General Outpatient Services -
-                                        Trauma, Communicable & Non-Communicable Diseases, Chronic Ailments</small>
-                                </div>
-                                <div>Free (Emergency)<br>100 (General OPD)</div>
+                            <div class="table-row">
+                                <div class="service-name"><strong>Pharmacy</strong></div>
                                 <div>15-30 Minutes</div>
                             </div>
                         </div>
@@ -211,6 +221,30 @@
                 <!-- Accordion Item 4 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
+                        <h3>Emergency & Outpatient Services</h3>
+                        <span class="accordion-icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="service-table">
+                            <div class="table-header">
+                                <div>Service</div>
+                                <div>Time</div>
+                            </div>
+                            <div class="table-row highlight">
+                                <div class="service-name">
+                                    <h3>Accident & Emergency Services</h3>
+                                    <small style="display:block; margin-top:5px;">General Outpatient Services -
+                                        Trauma, Communicable & Non-Communicable Diseases, Chronic Ailments</small>
+                                </div>
+                                <div>15-30 Minutes</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Accordion Item 5 -->
+                <div class="accordion-item">
+                    <div class="accordion-header">
                         <h3>👁️ Eye Clinic Services</h3>
                         <span class="accordion-icon">+</span>
                     </div>
@@ -218,28 +252,35 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
                                     <strong>👁️ Eye Clinic</strong>
                                     <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
-                                        <li>Consultation: KSH 200</li>
-                                        <li>Cataract Surgery: KSH 3,000 - 5,000</li>
-                                        <li>Eye Laser Procedures: KSH 1,500</li>
-                                        <li>Other Eye Surgeries: KSH 2,500</li>
-                                        <li>Optometry (Eyewear & Lenses): From 2,000</li>
+                                        <li>Consultation</li>
+                                        <li>Cataract Surgery</li>
+                                        <li>Eye Laser Procedures</li>
+                                        <li>Other Eye Surgeries</li>
+                                        <li>Glaucoma Management</li>
+
+                                    </ul>
+                                    <strong> 👓 Optometry (Eyewear & Lenses)</strong>
+                                    <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
+                                        <li>Eye Examinations</li>
+                                        <li>Vision Testing</li>
+                                        <li>Contact Lens Fitting</li>
+                                        <li>Prescription Eyewear</li>
+                                        <li>Low Vision Rehabilitation</li>
                                     </ul>
                                 </div>
-                                <div>200 - 5,000</div>
                                 <div>15 Minutes - In-Patient</div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Accordion Item 5 -->
+                <!-- Accordion Item 6 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
                         <h3>🦷 Dental Clinic Services</h3>
@@ -249,31 +290,29 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row highlight">
                                 <div class="service-name">
                                     <strong>🦷 Dental Clinic</strong>
                                     <ul style="margin:10px 0 0 20px; font-size:0.9rem;">
-                                        <li>Consultation: KSH 200</li>
-                                        <li>Extractions: KSH 200</li>
-                                        <li>Root Canal: KSH 2,000 - 3,000</li>
-                                        <li>Fillings: KSH 1,000</li>
-                                        <li>Full Mouth Scaling: KSH 500</li>
-                                        <li>Disimpaction: KSH 2,000</li>
-                                        <li>Pulpotomy: KSH 1,000</li>
-                                        <li>Dentures: KSH 1,500 - 6,000</li>
+                                        <li>Consultation</li>
+                                        <li>Extractions</li>
+                                        <li>Root Canal</li>
+                                        <li>Fillings</li>
+                                        <li>Full Mouth Scaling (teeth cleaning) & polishing</li>
+                                        <li>Disimpaction</li>
+                                        <li>Pulpotomy</li>
+                                        <li>Dentures</li>
                                     </ul>
                                 </div>
-                                <div>200 - 6,000</div>
                                 <div>15-90 Minutes</div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Accordion Item 6 -->
+                <!-- Accordion Item 7 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
                         <h3>Additional Services</h3>
@@ -283,27 +322,16 @@
                         <div class="service-table">
                             <div class="table-header">
                                 <div>Service</div>
-                                <div>Charges (KSH)</div>
                                 <div>Time</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Rehabilitative Services</strong><br><small>Medical
                                         Social Work</small></div>
-                                <div>100</div>
                                 <div>30-40 Minutes</div>
                             </div>
                             <div class="table-row">
                                 <div class="service-name"><strong>Nutrition & Dietetic Services</strong></div>
-                                <div>300</div>
                                 <div>15-30 Minutes</div>
-                            </div>
-                            <div class="table-row">
-                                <div class="service-name">
-                                    <strong>X-Ray Services</strong><br>
-                                    <small>OPG: KSH 500 - 800 | IOPA</small>
-                                </div>
-                                <div>500 - 1,500</div>
-                                <div>30 Min - 1 Hour</div>
                             </div>
                         </div>
                     </div>
@@ -369,7 +397,7 @@
                     <div class="icon">🦷</div>
                     <h3>Dental Surgery</h3>
                     <p><strong>3 Dental Surgeons</strong></p>
-                    <p>Providing dental implants, orthodontics, and oral surgery for healthier smiles.</p>
+                    <p>Providing dental care for healthier smiles.</p>
                 </div>
 
                 <div class="specialist-card">
@@ -382,8 +410,9 @@
                 <div class="specialist-card">
                     <div class="icon">🏥</div>
                     <h3>Medical Staff</h3>
-                    <p><strong>Support Team</strong></p>
-                    <p>Includes nurses, lab technicians, and support staff who provide essential care services.</p>
+                    <p>Lab Technologists, Nutritionist<br>nurses and support staff who provide essential care services.
+                    </p>
+
                 </div>
             </div>
         </div>
@@ -400,14 +429,14 @@
                     <div class="contact-box">
                         <div class="icon">📍</div>
                         <h3>Visit Us</h3>
-                        <p>Kenneth Matiba Hospital<br>Kimorori/Wempa, muranga south, Murang'a<br>Kenya<br>P.O. Box
-                            12345-00100</p>
+                        <p>Kenneth Matiba Hospital<br>Makenji-Kabati, Murang'a<br>Kenya<br>P.O. Box
+                            376-01020</p>
                     </div>
 
                     <div class="contact-box">
                         <div class="icon">📞</div>
                         <h3>Call Us</h3>
-                        <p><strong>Main Line:</strong> +254 710 218 678</p>
+                        <p><strong>Main Line:</strong> +254 110 218 678</p>
                     </div>
 
                     <div class="contact-box">
@@ -466,12 +495,12 @@
 
             <div class="footer-section">
                 <h3>Emergency</h3>
-                <p>24/7 Emergency Contact:<br><strong>+254 710 218 678</strong></p>
+                <p>24/7 Emergency Contact:<br><strong>+254 102 186 778</strong></p>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 Kenneth Matiba Eye & Dental Hospital - Ministry of Health. All rights reserved.</p>
+            <p>&copy; Kenneth Matiba Eye & Dental Hospital - Ministry of Health. All rights reserved.</p>
         </div>
     </footer>
 
